--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_life_login_web_page">LifeLoginWebPage</string>
+    <string name="title_activity_logout">LogoutActivity</string>
+    <string name="logout">Logout</string>
 </resources>
